# nexcore-sdk

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLATFORM.md  PUBLISH.md  README.md
.github/: SECURITY.md
.github/workflows/: ci.yml
go/: README.md  account.go  client.go  doc.go  energy.go  errors.go  exchange.go  go.mod  http.go  payment.go  payment_test.go  smtp.go  vcard.go  withdraw.go
go/examples/: ai_chat.go  create_order.go  webhook.go
go/examples/create_order/: main.go
go/examples/webhook/: main.go
node/: README.md  index.d.ts  index.js  package.json
node/examples/: ai_chat.js  create_order.js  webhook_express.js
node/src/: client.js  errors.js  http.js
node/src/namespaces/: account.js  energy.js  exchange.js  payment.js  smtp.js  vcard.js  withdraw.js
node/test/: payment_sign.test.js
php/: Client.php  README.md  composer.json
php/examples/: ai_chat.php  create_order.php  webhook.php
php/src/: Client.php  Http.php  NexCoreError.php
php/src/Namespaces/: Account.php  Energy.php  Exchange.php  Payment.php  Smtp.php  VCard.php  Withdraw.php
php/tests/: PaymentSignTest.php
python/: README.md  nexcore.py  pyproject.toml
python/examples/: ai_chat.py  create_order.py  webhook_flask.py
python/nexcore/: __init__.py  client.py  errors.py  http.py
python/nexcore/namespaces/: __init__.py  account.py  energy.py  exchange.py  payment.py  smtp.py  vcard.py  withdraw.py
python/tests/: test_payment_sign.py
