[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexcore-sdk"
version = "3.2.0"
description = "Official NexCore Python SDK — Payment / Withdraw / Exchange / Energy / SMTP / Account / VCard all-in-one"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "NexCore Team" }]
keywords = ["nexcore", "payment", "crypto", "tron", "usdt", "smtp", "sdk", "trc20"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests>=2.25.0", "cryptography>=3.4.0"]

[project.urls]
Homepage = "https://github.com/DoBestone/nexcore-sdk"
Repository = "https://github.com/DoBestone/nexcore-sdk"
Issues = "https://github.com/DoBestone/nexcore-sdk/issues"
Documentation = "https://github.com/DoBestone/nexcore-sdk/tree/main/python"

[tool.setuptools.packages.find]
include = ["nexcore*"]
exclude = ["examples*", "tests*"]
